tests/sksl/errors/BinaryInvalidType.glsl
### Compilation failed:

error: 2: type mismatch: '*' cannot operate on '<INVALID>', 'int'
error: 6: type mismatch: '*' cannot operate on 'int', '<INVALID>'
error: 10: type mismatch: '*' cannot operate on '<INVALID>', '<INVALID>'
error: 18: type mismatch: '*' cannot operate on 'S', 'int'
error: 22: type mismatch: '*' cannot operate on 'int', 'S'
error: 26: type mismatch: '*' cannot operate on 'S', 'S'
error: 32: type mismatch: '*' cannot operate on 'sampler2D', 'int'
error: 36: type mismatch: '*' cannot operate on 'int', 'sampler2D'
error: 40: type mismatch: '*' cannot operate on 'sampler2D', 'sampler2D'
error: 46: type mismatch: '*' cannot operate on 'int[1]', 'int'
error: 50: type mismatch: '*' cannot operate on 'int', 'int[1]'
error: 54: type mismatch: '*' cannot operate on 'int[1]', 'int[1]'
12 errors
